--- a/index.html
+++ b/index.html
@@ -766,18 +766,18 @@
               />
             </div>
           </div>
-          <div class="col-12 text-light d-flex flex-column">
+          <div class="col-12 text-light d-flex flex-column mt-3">
             <h5 class="fw-semibold">Contact</h5>
-            <a class="text-decoration-none text-light m-0 mt-5"
+            <a class="text-decoration-none text-light m-0 mt-2"
               >+628-2875-5000</a
             >
             <a class="text-decoration-none text-light m-0 mt-2"
               >bookstore@gmail.com</a
             >
           </div>
-          <div class="col-12 d-flex flex-column">
+          <div class="col-12 d-flex flex-column mt-3">
             <h5 class="text-light fw-semibold">Menu</h5>
-            <a href="#categories" class="text-decoration-none text-light m-0 mt-5"
+            <a href="#categories" class="text-decoration-none text-light m-0 mt-2"
               >categories</a
             >
             <a href="#topOfWeek" class="text-decoration-none text-light m-0 mt-2"
@@ -793,9 +793,9 @@
               >partner</a
             >
           </div>
-          <div class="col-12 d-flex flex-column">
+          <div class="col-12 d-flex flex-column mt-3">
             <h5 class="text-light fw-semibold">Help</h5>
-            <a href="#categories" class="text-decoration-none text-light m-0 mt-5"
+            <a href="#categories" class="text-decoration-none text-light m-0 mt-2"
               >service</a
             >
             <a href="#categories" class="text-decoration-none text-light m-0 mt-2"
